* Fixed an issue where icon buttons weren't vertically aligned correctly * Tweaked the design of the datepicker * Reverted avatar list design

--- a/src/styles/atoms/_atoms.button.scss
+++ b/src/styles/atoms/_atoms.button.scss
@@ -230,6 +230,7 @@
   transition-property: color, background, box-shadow;
   transition-timing-function: var(--animation-easing);
   user-select: none;
+  vertical-align: middle;
   width: 100%;
 
   @include at($screen-xs) {
